--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -268,7 +268,7 @@ folderpanel.hometab.number_of_deleted_files_in_folder=Anzahl der gel\u00f6schen 
 folderpanel.hometab.number_of_local_files_in_folder=Anzahl der lokalen Datein 
 folderpanel.hometab.public_folder=\u00d6ffentlich
 folderpanel.hometab.secret_folder=Geheim
-folderpanel.hometab.synchronisation_eta=Bis Synchronisation fertig
+folderpanel.hometab.synchronisation_eta=Synchronisation fertig in
 folderpanel.hometab.synchronisation_percentage=Synchronisation
 folderpanel.hometab.title=Info
 folderpanel.hometab.total_number_of_files=Alle Dateien (lokal+gel\u00f6sch+verf\u00fcgbar)
