--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -502,10 +502,10 @@ preferences.dialog.advanced.title=Erweitert
 preferences.dialog.autostartleechfiles=Starte externe P2P Dateien automatisch 
 preferences.dialog.basedir=Standard Speicherort f\u00fcr neue Folder
 preferences.dialog.basedir.title=W\u00e4hlen Sie den standardm\u00e4\u00dfigen Speicherort f\u00fcr neue Folder
-preferences.dialog.bind=Anschluss adresse
-preferences.dialog.bind.any=Irgendeine
-preferences.dialog.bind.tooltip=W\u00e4hlt die Adresse aus, die PowerFolder benutzt 
-preferences.dialog.bindDescr=Anschluss Beschreibung
+preferences.dialog.bind=Interface
+preferences.dialog.bind.any=Alle
+preferences.dialog.bind.tooltip=W\u00e4hlt das Netwerkinterface aus, die PowerFolder benutzt 
+preferences.dialog.bindDescr=Beschreibung
 preferences.dialog.colortheme=PowerFolder Thema
 preferences.dialog.createdesktopshortcuts=Link auf dem Desktop anlegen
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Meldung wenn ein Benutzer einen Folder betritt, der nicht auf der Freundesliste steht. 
@@ -589,7 +589,7 @@ publicfolders.size=Gr\u00f6\u00dfe
 quickinfo.download.active={0} aktive Download(s)
 quickinfo.download.completed={0} Download(s) k\u00fcrzlich fertiggestellt
 quickinfo.download.title=Download \u00dcbersicht
-quickinfo.folder.is_in_sync=Folder synchronisiert
+quickinfo.folder.is_in_sync=Folder ist synchronisiert
 quickinfo.folder.is_synchronizing=Folder wird synchronisiert...
 quickinfo.folder.number_of_files_and_size={0} Dateien, {1}
 quickinfo.folder.status_of_folder=\u00dcber {0}
@@ -604,7 +604,7 @@ quickinfo.recylcebin.files={0} Dateien im Papierkorb
 quickinfo.recylcebin.title=Papierkorb
 quickinfo.root.downloads={0} Download(s) k\u00fcrzlich fertiggestellt
 quickinfo.root.friends={0} Freund(e) online
-quickinfo.root.insync=Alle Folder synchronisiert
+quickinfo.root.insync=Alle Folder sind synchronisiert
 quickinfo.root.offline=Offline
 quickinfo.root.syncing=Synchronisation aktiv...
 quickinfo.root.title=Willkommen bei PowerFolder\!
