renamings to tabs, filename problemes dialog

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -131,9 +131,9 @@ dialog.updatecheck.nothingNeverAsk=Nicht mehr erinnern
 dialog.updatecheck.text=Eine neue Version von PowerFolder is verf\u00fcgbar \n\nIhre version\: v{0}\nAktuellste version\: v{1} (neuer)\n
 dialog.updatecheck.title=Update verf\u00fcgbar
 
-directorypanel.dropfile_duplicate_dialog.skipall=Doppelte \u00fcberspringen
-directorypanel.dropfile_duplicate_dialog.text=Dieser Folder enh\u00e4lt '{0}' bereits. M\u00f6chten Sie diese Datei \u00fcberschreiben?
-directorypanel.dropfile_duplicate_dialog.title=Datei bereits vorhanden
+folderpanel.filestab.dropfile_duplicate_dialog.skipall=Doppelte \u00fcberspringen
+folderpanel.filestab.dropfile_duplicate_dialog.text=Dieser Folder enh\u00e4lt '{0}' bereits. M\u00f6chten Sie diese Datei \u00fcberschreiben?
+folderpanel.filestab.dropfile_duplicate_dialog.title=Datei bereits vorhanden
 
 disablesilentmode.description=Ruhemodus derzeitig aktiv. Hinzugef\u00fcgte/ver\u00e4nderte Dateien werden nicht erkannt. Bitte anklicken, um wieder in den aktiven Modus zu wechseln.
 disablesilentmode.key=w
@@ -259,7 +259,7 @@ folderleave.dialog.title=Folder {0} verlassen ?
 folderleave.key=V
 folderleave.name=Folder verlassen
 
-folderpanel.hometab.choose_sync_profile=Bitte w\u00e4hlen Sie das Synchronisationsprofil
+folderpanel.settingstab.choose_sync_profile=Bitte w\u00e4hlen Sie das Synchronisationsprofil
 folderpanel.hometab.folder_type=Folder Typ
 folderpanel.hometab.local_folder_location=Lokales Verzeichnis
 folderpanel.hometab.local_size=Lokale Gr\u00f6sse
