--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -131,9 +131,9 @@ dialog.updatecheck.nothingNeverAsk=No hacer nada y no preguntar de nuevo
 dialog.updatecheck.text=Est\u00e1 disponible una nueva versi\u00f3n de PowerFolder            \n\nEsta versi\u00f3n\: v{0}\nUltima disponible\: v{1} (la m\u00e1s nueva)\n
 dialog.updatecheck.title=Nueva versi\u00f3n disponible
 
-##directorypanel.dropfile_duplicate_dialog.skipall=Skip All Duplicates
-##directorypanel.dropfile_duplicate_dialog.text=This folder already contains a file '{0}' would you like to overwrite the existing file?
-##directorypanel.dropfile_duplicate_dialog.title=File exists
+##folderpanel.filestab.dropfile_duplicate_dialog.skipall=Skip All Duplicates
+##folderpanel.filestab.dropfile_duplicate_dialog.text=This folder already contains a file '{0}' would you like to overwrite the existing file?
+##folderpanel.filestab.dropfile_duplicate_dialog.title=File exists
 
 disablesilentmode.description=Modo silencioso activo, no se detectar\u00e1 archivos nuevos o modificados. Pulse para cambiar a modo completo
 disablesilentmode.key=w
@@ -259,7 +259,7 @@ folderleave.dialog.title=\u00bfAbandonar la carpeta {0} ?
 folderleave.key=A
 folderleave.name=Abandonar carpeta
 
-##folderpanel.hometab.choose_sync_profile=Choose synchronisation profile
+##folderpanel.settingstab.choose_sync_profile=Choose synchronisation profile
 ##folderpanel.hometab.folder_type=Folder type
 ##folderpanel.hometab.local_folder_location=Local folder location
 ##folderpanel.hometab.local_size=Local size
