--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -131,9 +131,9 @@ dialog.updatecheck.nothingNeverAsk=Ne rien faire et ne jamais me reposer la ques
 dialog.updatecheck.text=Une nouvelle version de PowerFolder est disponible            \n\nVersion actuelle\: v{0}\nVersion disponible\: v{1} (plus r\u00e9cente)\n
 dialog.updatecheck.title=Nouvelle version disponible
 
-directorypanel.dropfile_duplicate_dialog.skipall=Outre-passer les reproductions existantes
-directorypanel.dropfile_duplicate_dialog.text=Ce dossier contient d\u00e9j\u00e0 un fichier '{0}' Voulez-vous \u00e9craser le fichier existant ?
-directorypanel.dropfile_duplicate_dialog.title=Fichier existant
+folderpanel.filestab.dropfile_duplicate_dialog.skipall=Outre-passer les reproductions existantes
+folderpanel.filestab.dropfile_duplicate_dialog.text=Ce dossier contient d\u00e9j\u00e0 un fichier '{0}' Voulez-vous \u00e9craser le fichier existant ?
+folderpanel.filestab.dropfile_duplicate_dialog.title=Fichier existant
 
 disablesilentmode.description=Mode silencieux activ\u00e9, les fichiers ajout\u00e9s/modifi\u00e9s ne seront pas trouv\u00e9s. Passer en mode Actif.
 disablesilentmode.key=M
@@ -259,7 +259,7 @@ folderleave.dialog.title=D\u00e9connexion du dossier {0} ?
 folderleave.key=F
 folderleave.name=Fermer le dossier
 
-folderpanel.hometab.choose_sync_profile=Choisir un profil de synchronisation
+folderpanel.settingstab.choose_sync_profile=Choisir un profil de synchronisation
 folderpanel.hometab.folder_type=Type de dossier
 folderpanel.hometab.local_folder_location=Emplacement du dossier local
 folderpanel.hometab.local_size=Taille locale
