--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -131,9 +131,9 @@ dialog.updatecheck.nothingNeverAsk=Non chiedere pi\u00f9 nulla
 dialog.updatecheck.text=Una nuova versione di PowerFolder \u00e8 disponibile            \n\nQuesta versione\: v{0}\nUltima versione\: v{1} (recente)\n
 dialog.updatecheck.title=Nuova versione disponibile
 
-directorypanel.dropfile_duplicate_dialog.skipall=Salta Tutti I Duplicati
-directorypanel.dropfile_duplicate_dialog.text=Questa cartella contiene gi\u00e0 un file '{0}' si desidera sovrascrivere il file esistente?
-directorypanel.dropfile_duplicate_dialog.title=Il file esiste
+folderpanel.filestab.dropfile_duplicate_dialog.skipall=Salta Tutti I Duplicati
+folderpanel.filestab.dropfile_duplicate_dialog.text=Questa cartella contiene gi\u00e0 un file '{0}' si desidera sovrascrivere il file esistente?
+folderpanel.filestab.dropfile_duplicate_dialog.title=Il file esiste
 
 disablesilentmode.description=Siletmode \u00e8 attualmente attivo, file modificati/aggiunti non saranno trovati. Premi per tornare in modalit\u00e0 completa.
 disablesilentmode.key=S
@@ -259,7 +259,7 @@ folderleave.dialog.title=Esci dalla cartella {0} ?
 folderleave.key=E
 folderleave.name=Esci dalla cartella
 
-folderpanel.hometab.choose_sync_profile=Scegli il tuo profilo di sincronizzazione
+folderpanel.settingstab.choose_sync_profile=Scegli il tuo profilo di sincronizzazione
 folderpanel.hometab.folder_type=Tipo cartella
 folderpanel.hometab.local_folder_location=percorso della cartella locale
 folderpanel.hometab.local_size=Dimensione locale
