--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -131,9 +131,9 @@ dialog.updatecheck.nothingNeverAsk=Niets en vraag niet opnieuw
 dialog.updatecheck.text=Een nieuwe versie van PowerFolder is beschikbaar            \n\nDeze versie\: v{0}\nLaatste versie beschikbaar\: v{1} (nieuwer)\n
 dialog.updatecheck.title=Nieuwe versie beschikbaar
 
-directorypanel.dropfile_duplicate_dialog.skipall=Sla alle dubbelen over
-directorypanel.dropfile_duplicate_dialog.text=Deze map bevat al een bestand genaamd '{0}' wilt u dit bestaande bestand overschrijven?
-directorypanel.dropfile_duplicate_dialog.title=Bestand bestaat
+folderpanel.filestab.dropfile_duplicate_dialog.skipall=Sla alle dubbelen over
+folderpanel.filestab.dropfile_duplicate_dialog.text=Deze map bevat al een bestand genaamd '{0}' wilt u dit bestaande bestand overschrijven?
+folderpanel.filestab.dropfile_duplicate_dialog.title=Bestand bestaat
 
 disablesilentmode.description=Passieve mode is gekozen, toegevoegde/gewijzigde bestanden worden niet automatisch gevonden. Klik voor actieve mode.
 disablesilentmode.key=w
@@ -259,7 +259,7 @@ folderleave.dialog.title=Stop delen van Folder {0} ?
 folderleave.key=V
 folderleave.name=Verlaat folder
 
-folderpanel.hometab.choose_sync_profile=Kies synchronizatie profiel
+folderpanel.settingstab.choose_sync_profile=Kies synchronizatie profiel
 folderpanel.hometab.folder_type=Folder type
 folderpanel.hometab.local_folder_location=Lokale map lokatie
 folderpanel.hometab.local_size=Lokale omvang
