--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -131,9 +131,9 @@ dialog.updatecheck.nothingNeverAsk=\u4eca\u56de\u306f\u4f55\u3082\u305b\u305a\u5
 dialog.updatecheck.text=PowerFolder \u306e\u66f4\u65b0\u7248\u304c\u5165\u624b\u53ef\u80fd\u3067\u3059\u3002 \n\n\u672c\u7248\: v{0}\n\u66f4\u65b0\u7248\: v{1}\uff08\u6700\u65b0\uff09\n
 dialog.updatecheck.title=\u66f4\u65b0\u7248\u5165\u624b\u53ef\u80fd
 
-directorypanel.dropfile_duplicate_dialog.skipall=\u91cd\u8907\u30d5\u30a1\u30a4\u30eb\u306f\u3059\u3079\u3066\u30b9\u30ad\u30c3\u30d7
-directorypanel.dropfile_duplicate_dialog.text=\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u306b\u306f\u30d5\u30a1\u30a4\u30eb '{0}' \u304c\u3059\u3067\u306b\u5b58\u5728\u3057\u307e\u3059\u3002\u65e2\u5b58\u30d5\u30a1\u30a4\u30eb\u3092\u4e0a\u66f8\u304d\u3057\u307e\u3059\u304b\uff1f
-directorypanel.dropfile_duplicate_dialog.title=\u540c\u4e00\u30d5\u30a1\u30a4\u30eb\u304c\u5b58\u5728\u3057\u307e\u3059
+folderpanel.filestab.dropfile_duplicate_dialog.skipall=\u91cd\u8907\u30d5\u30a1\u30a4\u30eb\u306f\u3059\u3079\u3066\u30b9\u30ad\u30c3\u30d7
+folderpanel.filestab.dropfile_duplicate_dialog.text=\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u306b\u306f\u30d5\u30a1\u30a4\u30eb '{0}' \u304c\u3059\u3067\u306b\u5b58\u5728\u3057\u307e\u3059\u3002\u65e2\u5b58\u30d5\u30a1\u30a4\u30eb\u3092\u4e0a\u66f8\u304d\u3057\u307e\u3059\u304b\uff1f
+folderpanel.filestab.dropfile_duplicate_dialog.title=\u540c\u4e00\u30d5\u30a1\u30a4\u30eb\u304c\u5b58\u5728\u3057\u307e\u3059
 
 disablesilentmode.description=\u30b5\u30a4\u30ec\u30f3\u30c8\u30e2\u30fc\u30c9\u304c\u73fe\u5728\u6709\u52b9\u3001\u5909\u66f4\u3084\u8ffd\u52a0\u3055\u308c\u305f\u30d5\u30a1\u30a4\u30eb\u306e\u691c\u51fa\u306f\u4f11\u6b62\u3001\u3053\u306e\u30dc\u30bf\u30f3\u3092\u62bc\u3059\u3068\u30d5\u30eb\u30e2\u30fc\u30c9\u306b\u5fa9\u5e30
 disablesilentmode.key=W
@@ -259,7 +259,7 @@ folderleave.dialog.title={0} \u30d5\u30a9\u30eb\u30c0\u9000\u907f\uff1f
 folderleave.key=L
 folderleave.name=\u30d5\u30a9\u30eb\u30c0\u9000\u907f(L)
 
-folderpanel.hometab.choose_sync_profile=\u540c\u671f\u65b9\u5f0f\u306e\u9078\u629e
+folderpanel.settingstab.choose_sync_profile=\u540c\u671f\u65b9\u5f0f\u306e\u9078\u629e
 folderpanel.hometab.folder_type=\u30d5\u30a9\u30eb\u30c0\u306e\u5c5e\u6027
 folderpanel.hometab.local_folder_location=\u30ed\u30fc\u30ab\u30eb\u30d5\u30a9\u30eb\u30c0\u306e\u5834\u6240
 folderpanel.hometab.local_size=\u30ed\u30fc\u30ab\u30eb\u30b5\u30a4\u30ba
