--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -793,15 +793,17 @@ wizard.projectname.title=Einladung \u00f6ffnen
 wizard.projectsync.projectsyncsuccess=Ihre Konfiguration zur Projektsynchronisation war erfolgreich\!\nAndere Projektmitglieder k\u00f6nnen nun beitreten.
 wizard.projectsync.selectdirectory=Bitte geben Sie den Ort Ihrer Projektdaten an.
 wizard.projectsync.selectlocaldirectory=Bitte geben Sie das Ziel f\u00fcr Ihre Projektdaten an.
-wizard.projectsync.setupsync=Einstellungen zur Projektsynchronisation
+wizard.projectsync.setupsync=Ein neues Projekt synchronisieren
 wizard.projectsync.successjoin=Sie sind dem Projekt erfolgreich beigetreten\!
+wizard.sendinvitations.savetofile=Als Datei speichern
+wizard.sendinvitations.sendbymail=Per Mail versenden
+wizard.sendinvitations.offline=Nicht verbunden
+wizard.sendinvitations.overpf=Über PowerFolder versenden
 wizard.projectsync.takepartsync=An einer Projektsynchronisation teilnehmen
-wizard.projectsync.title=Projektsynchronisation
-wizard.sendinvitations.create=Um nun eine Einladung zu verfassen, w\u00e4hlen Sie unten den Dateinamen
-wizard.sendinvitations.joinsync=<html>Eine Einladung wird ben\u00f6tigt um an einer Sychronisation<br>teilzunehmen</html>
-wizard.sendinvitations.neveruntrusted=<html>Geben Sie niemals Einladungen an nicht vertrauensw\u00fcrdige<br>Personen</html>
-wizard.sendinvitations.passwdasfile=\u00c4hnelt einem Passwort, wird allerdings in einer Datei gespeichert
-wizard.sendinvitations.savefile=Einladung speichern
+wizard.projectsync.title=Projekt Synchronisation
+wizard.sendinvitations.joinsync=<html>Eine Einladung wird ben\u00f6tigt um an einer Sychronisation<br>teilzunehmen.</html>
+wizard.sendinvitations.neveruntrusted=<html>Geben Sie Einladungen nur an vertrauensw\u00fcrdige<br>Personen.</html>
+wizard.sendinvitations.sendinvitation=Einladung versenden
 wizard.sendinvitations.title=Einladung speichern
 wizard.setupdns.dyndnshomepage=Dyndns Homepage
 wizard.setupdns.enterdns=Bitte geben Sie Ihre (dynamische) Internetadresse an
