--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -17,6 +17,9 @@
 # http://www.powerfolder.com
 #
 
+wizard.sendinvitations.sendsuccess=Einladung versendet
+wizard.sendinvitations.sendsuccessinfo=Die Einladung wurde erfolgreich versendet.
+
 abortcopy.description=Bricht den Kopiervorgang ab
 abortcopy.key=A
 abortcopy.name=Abbrechen
