Disabled public networking

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -543,9 +543,8 @@ preferences.dialog.linesettings=Inet Geschwindigkeit
 preferences.dialog.network.title=Netzwerk
 preferences.dialog.networkmode.lanonly=Nur LAN
 ##preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
-preferences.dialog.networkmode.private=Privates Netz   
+preferences.dialog.networkmode.private=LAN und Internet
 ##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Disables public folder sharing. Restricts connectivity to interesting users only.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to some other users so finding of your friends in the network is possible.</BODY></HTML>
-preferences.dialog.networkmode.public=\u00d6ffentlich
 ##preferences.dialog.networkmode.public.tooltip=<HTML><BODY>Enables public Folder sharing.<BR>Private folders will always require an Invitation, regardless of the networking mode.</BODY></HTML>
 preferences.dialog.nickname=Benutzername
 preferences.dialog.nonwindowsinfo=Hinweis\: Einige Einstellung sind nur Benutzern von Windows m\u00f6glich\!
@@ -762,9 +761,8 @@ unignorefile.name=Dateien wiedereinschliessen
 
 wizard.basicsetup.enternick=Bitte Nickname eingeben
 wizard.basicsetup.lanonly=Nur LAN
-wizard.basicsetup.networking=Netzwerk Modus
-wizard.basicsetup.private=Privat/Geschlossene Gruppe
-wizard.basicsetup.public=\u00d6ffentliches Netz
+wizard.basicsetup.networking=Verbindungen
+wizard.basicsetup.private=LAN und Internet
 wizard.basicsetup.title=Basis Setup
 wizard.choosedisklocation.select=Verzeichnisauswahl
 wizard.choosedisklocation.title=Festplatten Speicherort
