Added "Disconnected" text to friendlist

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -329,11 +329,12 @@ general.friendlist=Freunde
 general.from=von
 general.help=Hilfe
 general.hide=Verstecken
-general.inet=i-net
+general.inet=Internet
 general.localcopyat=Lokaler Speicherort
 general.localcopyplace=W\u00e4hlen den lokalen Speicherort 
 general.localized_date_format=MMMM dd. yyyy
-general.localnet=lokal
+general.localnet=LAN
+general.disconnected=Nicht verbunden
 general.member=Benutzer
 general.notavailable=nicht verf\u00fcgbar
 general.notfound=nicht gefunden
