- Added user quickinfo panel - Removed crappy icons

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -17,6 +17,11 @@
 # http://www.powerfolder.com
 #
 
+quickinfo.user.isconnectedlan=ist im LAN
+quickinfo.user.isconnectedinet=ist im Internet
+quickinfo.user.isdiconnected=ist nicht verbunden
+quickinfo.user.secureconnected=Die Verbindung ist sicher
+
 wizard.sendinvitations.sendsuccess=Einladung versendet
 wizard.sendinvitations.sendsuccessinfo=Die Einladung wurde erfolgreich versendet.
 
