--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -17,6 +17,7 @@
 # http://www.powerfolder.com
 #
 
+statusbar.synchronizing=Synchronisiere...
 quickinfo.user.isconnectedlan=ist im LAN
 quickinfo.user.isconnectedinet=ist im Internet
 quickinfo.user.isdiconnected=ist nicht verbunden
